# admin-vue3/src/api/login.js
@@ -1,9 +1,9 @@
 import request from '@/utils/request'
 
 // 登录方法
-export function login(username, password, code, uuid) {
+export function login(userName, password, code, uuid) {
   const data = {
-    username,
+    userName,
     password,
     code,
     uuid
