# server/src/module/main/main.service.ts
@@ -24,7 +24,6 @@ export class MainService {
   async login(user: LoginDto, clientInfo: ClientInfoDto) {
     const loginLog = {
       ...clientInfo,
-      userName: user.username,
       status: '0',
       msg: '',
     };
